# TDLT_project

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: fsl_faithful_fitted_params.json  strict_protocol.json  tuned_mtl_best_metrics.json  tuned_mtl_best_model.json  tuned_mtl_selection.json  variant_fitted_params.json
docs/: artifact_map.md  math_audit_mtl_mpl_fsl.md  methodological_note.md
results/: all_metrics.csv
results/baselines/: fitted_params.json  metrics.csv  predictions.csv  restart_summary.csv  sanity_checks.json
results/env/: import_check.txt  pip_freeze.txt
results/tuned_mtl/: fitted_params.json  metrics.csv  predictions.csv  restart_summary.csv
results/variants/: data_manifest.csv  fitted_params.json  metrics.csv  predictions.csv  restart_summary.csv
scripts/: reproduce_all.py  run_baselines.py  run_tuned_mtl.py  run_variants.py
slides/: PekingU.sty  tdlt_final_project.tex
slides/qa/: visual_qa.md
src/tdlt_losscurves/: __init__.py  data.py  experiments.py  metrics.py  plotting.py  protocols.py  utils.py
src/tdlt_losscurves/models/: __init__.py  common.py  fsl.py  kmtl.py  mpl_like.py  mtl.py
tests/: test_sanity.py
