[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdlt-losscurves"
version = "0.1.0"
description = "TDLT Task 2 loss-curve prediction baselines, variants, and tuned MTL baseline."
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.11.4",
  "matplotlib==3.8.4",
  "tqdm==4.66.4",
  "scikit-learn==1.4.2",
  "pandas==2.2.2",
  "torch==2.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
